Terminado el portafolio

--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -1,5 +1,55 @@
 <%- include('template/header');%>
-<body>
-    <h1>Esta es educacion</h1>
-</body>
-</html>
+    <link rel="stylesheet" type="text/css" href="./../image/css/educacion.css">
+    <title>Educación</title>
+    <div id="tbaaa">
+        <div class="tabla">
+            <div class="foto">
+                <img src="./../image/foto.jpg">
+            </div>
+            <table>
+                <tr>
+                    <th colspan="2">Formación Académica</th>
+                </tr>
+                <tr>
+                    <td>Tecnólogo Analisis y Desarrollo en Sistemas de Información</td>
+                    <td>Servicio Nacional de
+                        Aprendizaje SENA
+                        Centro Gestión de
+                        Mercados, Logística y
+                        Tecnologías de la
+                        Información.<br>
+                        Fontibón Calle 19a#96c-40Bogotá<br>
+                        09-DIC-2021<br>
+                        En formación
+                    </td>
+                </tr>
+                <tr>
+                    <td>Técnico Programación de Sotfware</td>
+                    <td>Servicio Nacional de Aprendizaje SENA <br>
+                        Colegio Naciones Unidas IED <br>
+                        Calle 73a#69j-10 <br>
+                        30-NOV-2021<br>
+                        Terminado
+                    </td>
+                </tr>
+                <tr>
+                    <td>Estudios Secundarios</td>
+                    <td>Colegio Naciones Unidas IED <br>
+                        Calle 73a#69j-10 <br>
+                        Bachiller Académico <br>
+                        2021
+                    </td>
+                </tr>
+                <tr>
+                    <td>Estudios Primarios</td>
+                    <td>Colegio Floridablanca IED <br>
+                        Calle 70a #94-38 <br>
+                        Básica Primaria <br>
+                        2015</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <%- include('template/footer');%>
+
+        </html>
