--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./../image/css/index.css">
     <title>Portafolio Brayan Camilo</title>
 </head>
-<body>
-    <h1>Brayan Camillo</h1>
-</body>
+<%- include('template/header');%>
+    <div id="banner">
+        <div class="container">
+            <img src="./../image/guino.png" class="primera">
+            <h1>Palomis:D</h1>
+            <img src="./../image/conmocionado.png" class="primera">
+        </div>
+    </div>
+    <div class="perfil">
+        <h1>Perfil</h1>
+        <p>Persona con diferentes y excelentes habilidades comunicativas, asertivas y
+            objetivas, cuento con buenos conocimiento de lenguajes de programación como
+            JAVA Y PHP, así mismo haciendo uso de HTML y CSS, es dinámico,
+            comprometido, responsable con las diferentes actividades que se le asignen,
+            para así tener un buen resultado.</p>
+        <ul>
+            <li>Conocimientos en lenguaje de programacion como JAVA.</li>
+            <li>Utilizo de manera correcta las propiedades de css3</li>
+            <li>Utilizo correctamente las herramientas ofimaticas</li>
+        </ul>
+    </div>
+    <%- include('template/footer');%>
+
 </html>
