--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -9,15 +9,39 @@
 </head>
 <div class="todo">
     <div class="logo">
-        <a href=""><img src="./../image/logo.png"></a>
+        <label><a href="/">Brayan Palomino</a></label>
     </div>
     <nav>
         <ul>
-            <li><a href="">Educacion</a></li>
-            <li><a href="">Educacion</a></li>
-            <li><a href="">Educacion</a></li>
-            <li><a href="">Educacion</a></li>
+            <li>
+                <a href="/Educacion">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Educación
+                </a>
+            </li>
+            <li>
+                <a href="/DatosPersonales">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                Datos Personales
+            </a>
+        </li>
+            <li>
+                <a href="/Personalidad">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Personalidad
+                </a>
+            </li>
         </ul>
     </nav>
 </div>
+<div id="logo2">Brayan Palomino</div>
 </html>
