--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,40 +1,131 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Roboto+Slab&display=swap');
+* {
     margin: 0;
     padding: 0;
 }
-.todo{
-    background: #FFB096;
+.todo {
+    position: fixed;
+    background: #5D00FF;
     width: 100%;
     height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
+    border-bottom: 1px solid black;
+    overflow: hidden;
 }
-.logo{
+.logo {
+    font-size: 40px;
+    font-weight: bold;
     padding: 0 60px;
 }
-.logo img{
-    width: 100%;
-    height: 80px;
+.logo a{
+    text-decoration: none;
+    font-family: 'Roboto Slab', serif;
+    color: white;
+    letter-spacing: 2px;
 }
-nav ul{
+.logo a:hover{
+    transition: 1s;
+    color: #C7B4E8;
+}
+nav ul {
     display: inline;
     display: flex;
     flex-direction: row;
     list-style: none;
     padding: 0 60px;
 }
-nav ul li{
+nav ul li {
+    position: relative;
     padding: 15px;
     font-size: 25px;
     margin: 0 20px;
     font-weight: 500;
-    font-family: 'Lobster', cursive;
+    overflow: hidden;
 }
-nav ul li a{
+nav ul li a {
     text-decoration: none;
-    color: black;
-    opacity: 0.5;
+    color: white;
+    transition: 0.2s;
+    font-family: 'Roboto Slab', serif;
+}
+nav ul li:hover{
+    background-color: #B09CD2;
+    transition: .4s ease-in-out;
+    border-radius: 4px;
+    /* box-shadow:  0 0 10px #B09CD2, 0 0 40px #B09CD2, 0 0 80px #B09CD2;
+    transition-delay: 1s; */
+}
+nav ul li a:hover{
+    color: #5E00FF;
+}
+nav ul li span{
+    position: absolute;
+    background: white;
+    transition: .5s;
+}
+nav ul li span:nth-child(1){
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 1px;
+    /* background:linear-gradient(90deg, transparent, #B09CD2); */
+}
+nav ul li span:nth-child(2){
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 1px;
+    /* background:linear-gradient(90deg, transparent, #B09CD2); */
+}
+nav ul li span:nth-child(3){
+    bottom: -100%;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    /* background:linear-gradient(90deg, transparent, #B09CD2); */
+}
+nav ul li span:nth-child(4){
+    top: -100%;
+    right: 0;
+    width: 1px;
+    height: 100%;
+    /* background:linear-gradient(90deg, transparent, #B09CD2); */
+}
+nav ul li:hover span:nth-child(1){
+    left: 0;
+}
+nav ul li:hover span:nth-child(2){
+    right: 0;
+}
+nav ul li:hover span:nth-child(3){
+    bottom: 0;
+}
+nav ul li:hover span:nth-child(4){
+    top: 0;
+}
+nav ul li:active{
+    background-color: #B9B0C8;
+    transition: .1s linear;
+}
+#logo2{
+	position: fixed;
+	width: 250px;
+	height: 40px;
+	bottom: 0;
+	right: 10px;
+    font-family: 'Roboto Slab', serif;
+	z-index: 1;
+	color: white;
+    background:#4E2D88;
+	text-align: center;
+	line-height: 40px;
+	font-size: 20px;
+	cursor: pointer;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow:  0 0 10px #312940, 0 0 40px #312940, 0 0 80px #312940;
 }
