Se termino el portafolio

--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -11,7 +11,9 @@
                     <th colspan="2">Formación Académica</th>
                 </tr>
                 <tr>
-                    <td>Tecnólogo Analisis y Desarrollo en Sistemas de Información</td>
+                    <td>Tecnólogo Analisis y Desarrollo en Sistemas de Información <br>
+                        <img class="logitos" src="./../image/sena.jpg">
+                    </td>
                     <td>Servicio Nacional de
                         Aprendizaje SENA
                         Centro Gestión de
@@ -24,7 +26,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Técnico Programación de Sotfware</td>
+                    <td>Técnico Programación de Sotfware<br>
+                        <img class="logitos" src="./../image/sena.jpg">
+                    </td>
                     <td>Servicio Nacional de Aprendizaje SENA <br>
                         Colegio Naciones Unidas IED <br>
                         Calle 73a#69j-10 <br>
@@ -33,7 +37,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Estudios Secundarios</td>
+                    <td>Estudios Secundarios <br><img class="logitos" src="./../image/colegioN.jpeg"></td>
                     <td>Colegio Naciones Unidas IED <br>
                         Calle 73a#69j-10 <br>
                         Bachiller Académico <br>
@@ -41,7 +45,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Estudios Primarios</td>
+                    <td>Estudios Primarios <br><img class="logitos" src="./../image/colegioF.jpg"></td>
                     <td>Colegio Floridablanca IED <br>
                         Calle 70a #94-38 <br>
                         Básica Primaria <br>
