--- a/public/css/educacion.css
+++ b/public/css/educacion.css
@@ -31,6 +31,12 @@ table tr td{
     line-height: 1.5;
     letter-spacing: 1px;
     padding: 20px 20px;
+    text-align: center;
+}
+table tr td img{
+    width: 90px;
+    height: 80px;
+    border-radius: 50%;
 }
 .foto{
     position: absolute;
